Bug 1535835 - Remove global weak ref to BrowsingContext within Unlink(), r=farre

Differential Revision: https://phabricator.services.mozilla.com/D30683